--- a/css/utilities.css
+++ b/css/utilities.css
@@ -120,6 +120,7 @@
 @media (max-width: 991px) {
     .about-grid {
         grid-template-columns: 1fr;
+        text-align: center;
     }
 }
 
@@ -149,6 +150,12 @@
 @media (max-width: 768px) {
     .stats-grid {
         grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 576px) {
+    .stats-grid {
+        grid-template-columns: 1fr;
     }
 }
 
